--- a/_includes/pages/services.html
+++ b/_includes/pages/services.html
@@ -85,17 +85,21 @@
     {% assign method_pages = site.pages | where: "kind", "method" | where: "locale", page.locale %}
     <div class="grid sp-6 q-lg-4">
       {%- for method in method_pages -%}
-      <a href="{{method.url}}" class="reset-link col sp-3 width-1_3 q-lg-width-1_2 q-sm-width-full" data-method-tile="{%- for domain in method.domains -%}{{domain.title}},{%- endfor -%}">
-        <img src="{{method.hero_image.url}}?w={{400}}&h={{400 | times: 3 | divided_by: 4}}&fit=fill&f=faces"
-          alt="{{method.hero_image.description}}" class="width-full" />
-        <h3 class="font-heading text-md">{{method.title}}</h3>
+      <div class="col sp-3 width-1_3 q-lg-width-1_2 q-sm-width-full" data-method-tile="{%- for domain in method.domains -%}{{domain.title}},{%- endfor -%}">
+        <a href="{{method.url}}">
+          <img src="{{method.hero_image.url}}?w={{400}}&h={{400 | times: 3 | divided_by: 4}}&fit=fill&f=faces"
+            alt="{{method.hero_image.description}}" class="width-full" />
+        </a>
+        <a href="{{method.url}}" class="reset-link">
+          <h3 class="font-heading text-md">{{method.title}}</h3>
+        </a>
         <div class="markdown text-sm">{{method.description | markdownify}}</div>
         <div class="row wrappable sp-2">
         {%- for tag in method.tags -%}
-          <div class="text-xxs pill">{{tag}}</div>
+          <a href="{% link_tag_url method {{tag}} %}" class="text-xxs pill">{{tag}}</a>
         {%- endfor -%}
         </div>
-      </a>
+      </div>
       {%- endfor -%}
     </div>
   </div>
