--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -292,4 +292,9 @@
   border: 1px solid $gray300;
   border-radius: 0.2em;
   padding: 0.3em 0.75em 0.15em;
+  text-decoration: none;
+  color: inherit;
+  &:hover {
+    background-color: $black-a05;
+  }
 }
