add contact tile

--- a/_includes/post-tile.html
+++ b/_includes/post-tile.html
@@ -1,4 +1,4 @@
-{%- assign post = includes.post -%}
+{%- assign post = include.post -%}
 <div class="col sp-3 width-1_3 q-lg-width-1_2 q-sm-width-full">
   <a href="{{post.url}}">
     <img src="{{post.hero_image.url}}?w={{400}}&h={{400 | times: 3 | divided_by: 4}}&fit=fill&f=faces"
