--- a/_layouts/method.html
+++ b/_layouts/method.html
@@ -7,7 +7,7 @@ layout: default
 <div class="col align-center px-4 py-7 pt-8">
 	<div class="maxwidth-5 width-full col sp-6">
 		<div class="col sp-4">
-			<div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{.services_title}}</div>
+			<div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.services_title}}</div>
 			<h1 class="font-heading text-xl">{{page.title}}</h1>
 			<img src="{{page.hero_image.url}}?w=800" alt="{{page.hero_image.description}}" class="full-width" />
 			<div class="col align-center">
