--- a/assets/css/_tokens.scss
+++ b/assets/css/_tokens.scss
@@ -22,6 +22,8 @@ $dimensions: (
 $blue: #009fe3;
 $white: #fff;
 
+$lightBlue: #c3edff;
+
 $gray100: #fafafa;
 $gray200: #dee3e6;
 $gray300: #bac0c4;
@@ -60,6 +62,7 @@ $colors: (
   red: $red,
   darkBlue: $darkBlue,
   purple: $purple,
+  lightBlue: $lightBlue,
 );
 
 $shadow-sm: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.1), 0 0.1rem 0.5rem rgba(0, 0, 0, 0.05);
