--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,41 +1,41 @@
 <header class="main-header bg-white col align-center px-4 py-4 fixed width-full">
   <div class="maxwidth-7 width-full row sp-3 align-center">
     {% locale_link home %}
-      <img src="/assets/images/logo_d-labs.svg" alt="{{ site.title | escape }}" class="height-3 header-logo" />
+    <img src="/assets/images/logo_d-labs.svg" alt="{{ site.title | escape }}" class="height-3 header-logo"/>
     {% endlocale_link %}
     <div class="push"></div>
 
     <nav class="row sp-6 align-baseline hide-lg">
       <div class="row sp-5 align-baseline">
-      {% for name in site.data.includes.header.pages %}
-        {% locale_link {{ name }} class:"link header-link" %}
+        {% for name in site.data.includes.header.pages %}
+          {% locale_link {{ name }} class:"link header-link" %}
           {{site.data.includes.header[page.locale][name]}}
-        {% endlocale_link %}
-      {% endfor %}
+          {% endlocale_link %}
+        {% endfor %}
       </div>
       {% language_switcher %}
     </nav>
     <div class="show-lg">
-    <button class="button-text header-menu-button" data-toggle="#mobile-nav">
-      <img src="/assets/images/icons/icon-menu.svg" class="h-2"/>
-    </button>
-  </div>
+      <button class="button-text header-menu-button" data-toggle="#mobile-nav">
+        <img class="h-2" src="/assets/images/icons/icon-menu.svg"/>
+      </button>
+    </div>
   </div>
 </header>
-<div id="mobile-nav" class="hidden relative" style="z-index: 11;">
+<div class="hidden relative" id="mobile-nav" style="z-index: 11;">
   <div class="fixed col inset-full bg-white px-5 py-4 align-center">
-    <div class="absolute top-4 right-4">
+    <div class="absolute top-4 right-4 mobile-nav-close-container">
       <button class="button-text show-lg" data-toggle="#mobile-nav">
-        <img src="/assets/images/icons/icon-close.svg" class="h-2"/>
+        <img class="h-2" src="/assets/images/icons/icon-close.svg"/>
       </button>
     </div>
     <div class="push"></div>
     <nav class="col sp-4 align-center">
-    {% for name in site.data.includes.header.pages %}
-      {% locale_link {{ name }} class:"link header-link text-center within-overlay" %}
+      {% for name in site.data.includes.header.pages %}
+        {% locale_link {{ name }} class:"link header-link text-center within-overlay" %}
         {{site.data.includes.header[page.locale][name]}}
-      {% endlocale_link %}
-    {% endfor %}
+        {% endlocale_link %}
+      {% endfor %}
     </nav>
     <div class="push maxheight-1"></div>
     {% language_switcher %}
