--- a/_includes/home-circles.html
+++ b/_includes/home-circles.html
@@ -107,94 +107,155 @@
       screen4:opacity=0
     "
   />
-  <text
+  <g
+    id="RESEARCH"
     transform="translate(152.5 402)"
     opacity="0"
-    font-size="14"
     fill="#eec000"
-    font-family="LetterGothic"
-    letter-spacing="0.15em"
-    style="isolation: isolate"
     data-attr-on-enter="
       screen0:opacity=0,translateX=152.5,translateY=402
       screen1:opacity=1,translateX=152.5,translateY=402
       screen2:opacity=1,translateX=77.5,translateY=455
       screen3:opacity=1,translateX=84.5,translateY=334
-      screen4:opacity=1,translateX=115.5,translateY=288
+      screen4:opacity=1,translateX=100,translateY=288
     "
   >
-    RESEARCH
-  </text>
-  <text
-    transform="translate(107.5 263)"
+  <path id="R" class="st1" d="M20,12.8L18.2,9h-1.1v3.8h-1.3V3.2h2.5C19.8,3,21,4,21.2,5.4c0,0.2,0,0.4,0,0.5
+  c0.1,1.2-0.6,2.3-1.7,2.7l2.1,4.1H20z M18.1,4.3h-1v3.6H18c0.9,0.1,1.7-0.6,1.8-1.6c0-0.1,0-0.2,0-0.4c0.1-0.8-0.5-1.6-1.3-1.6
+  C18.3,4.3,18.2,4.3,18.1,4.3L18.1,4.3z"/>
+  <path id="E" class="st1" d="M25,12.8V3.2h4.7v1.1h-3.4v2.9h3.2v1.1h-3.2v3.4h3.6v1.1H25z"/>
+  <path id="S" class="st1" d="M35.7,12.9c-1,0-2-0.4-2.8-1l0.7-1.1c0.6,0.5,1.4,0.9,2.2,0.9c0.7,0.1,1.4-0.5,1.5-1.2
+    c0-0.1,0-0.2,0-0.2c0-2.2-4-2-4-4.8c0-1.3,1-2.4,2.4-2.5c0.1,0,0.3,0,0.4,0c0.9,0,1.7,0.3,2.4,0.8l-0.6,1c-0.5-0.4-1.1-0.7-1.8-0.7
+    c-1,0-1.4,0.5-1.4,1.2c0,1.9,4.1,1.8,4.1,4.7c0.1,1.5-1.1,2.7-2.6,2.8C36,12.9,35.9,12.9,35.7,12.9z"/>
+  <path id="E-2" class="st1" d="M42.3,12.8V3.2H47v1.1h-3.4v2.9h3.2v1.1h-3.2v3.4h3.6v1.1H42.3z"/>
+  <path id="A" class="st1" d="M55.4,12.8l-0.7-2.7H52l-0.7,2.6H50l2.7-9.6h1.4l2.7,9.6L55.4,12.8z M53.9,6.9
+    c-0.3-0.8-0.4-1.6-0.5-2.5l0,0c-0.1,0.8-0.2,1.6-0.5,2.4l-0.6,2.2h2.1L53.9,6.9z"/>
+  <path id="R-2" class="st1" d="M64.3,12.8L62.5,9h-1.1v3.8h-1.3V3.2h2.5C64,3,65.3,4,65.4,5.4c0,0.2,0,0.3,0,0.5
+    c0.1,1.2-0.6,2.3-1.7,2.7l2.1,4.1H64.3z M62.4,4.3h-1v3.6h0.9c0.9,0.1,1.8-0.7,1.8-1.6c0-0.1,0-0.2,0-0.3
+    C64.1,4.8,63.5,4.3,62.4,4.3z"/>
+  <path id="C" class="st1" d="M71.8,12.9c-2,0-3.1-1.4-3.1-4.9s1.4-4.9,3.2-4.9C73.3,3,74.4,4,74.5,5.4c0,0.1,0,0.2,0,0.2h-1.2
+    c-0.1-1-0.6-1.4-1.4-1.4c-1,0-1.8,1-1.8,3.8s0.6,3.8,1.8,3.8c0.9,0,1.3-0.5,1.4-1.5h1.3c0.1,1.4-1,2.6-2.3,2.6
+    C72.1,12.9,72,12.9,71.8,12.9z"/>
+  <path id="H" class="st1" d="M82.8,12.8V8.2h-3.3v4.6h-1.3V3.2h1.3v3.9h3.3V3.2h1.3v9.6H82.8z"/>
+  </g>
+  <g
+    transform="translate(90 263)"
     opacity="0"
-    font-size="14"
     fill="#5aa700"
-    font-family="LetterGothic"
-    letter-spacing="0.15em"
-    style="isolation: isolate"
     data-attr-on-enter="
-      screen0:opacity=0,translateX=107.5,translateY=263
-      screen1:opacity=1,translateX=107.5,translateY=263
-      screen2:opacity=1,translateX=144.5,translateY=119
-      screen3:opacity=1,translateX=154.5,translateY=147
-      screen4:opacity=1,translateX=172.5,translateY=207
+      screen0:opacity=0,translateX=90,translateY=263
+      screen1:opacity=1,translateX=90,translateY=263
+      screen2:opacity=1,translateX=130,translateY=119
+      screen3:opacity=1,translateX=145,translateY=130
+      screen4:opacity=1,translateX=172.5,translateY=190
     "
   >
-    CONSULTING
-  </text>
-  <text
-    transform="translate(377.5 402)"
+    <path id="C" class="st1" d="M10.3,12.9c-2,0-3.1-1.4-3.1-4.9s1.4-4.9,3.2-4.9C11.7,3,12.9,4,13,5.3c0,0.1,0,0.2,0,0.3h-1.3
+      c-0.1-1-0.6-1.4-1.4-1.4c-1,0-1.8,1-1.8,3.8s0.6,3.8,1.8,3.8c0.9,0,1.3-0.5,1.4-1.5H13c0.1,1.4-1,2.6-2.3,2.6
+      C10.5,12.9,10.4,12.9,10.3,12.9z"/>
+    <path id="O" class="st1" d="M19.3,12.9c-1.9,0-3-1.5-3-4.9s1.2-4.9,3.2-4.9s3,1.5,3,4.9S21.2,12.9,19.3,12.9z M19.4,4.2
+      c-1.1,0-1.8,1.1-1.8,3.6c0,2.7,0.5,4.1,1.8,4.1s1.8-1.3,1.8-3.8S20.6,4.2,19.4,4.2z"/>
+    <path id="N" class="st1" d="M30.7,12.8l-2-4.3c-0.6-1.2-1-2.4-1.5-3.6l0,0c0.1,1.3,0.1,2.4,0.1,4.3v3.6h-1.2V3.2h1.5l1.9,4.3
+      c0.6,1.2,1,2.4,1.5,3.6l0,0C31,9.7,31,8.6,31,6.7V3.2h1.2v9.6H30.7z"/>
+    <path id="S" class="st1" d="M38.5,12.9c-1,0-2-0.4-2.8-1l0.7-1.1c0.6,0.5,1.4,0.9,2.2,0.9c0.7,0.1,1.4-0.5,1.5-1.2
+      c0-0.1,0-0.2,0-0.2c0-2.2-4-2-4-4.8c0-1.3,1-2.4,2.4-2.5c0.1,0,0.2,0,0.4,0c0.9,0,1.7,0.3,2.4,0.8l-0.6,1c-0.5-0.4-1.1-0.7-1.8-0.7
+      c-1,0-1.4,0.5-1.4,1.2c0,1.9,4.1,1.8,4.1,4.7c0,1.5-1.1,2.7-2.6,2.8C38.7,12.9,38.6,12.9,38.5,12.9z"/>
+    <path id="U" class="st1" d="M47.8,12.9c-1.7,0-2.7-0.9-2.7-3V3.2h1.3v6.7c0,1.1,0.4,1.9,1.5,1.9s1.5-0.8,1.5-1.9V3.2h1.3v6.7
+      C50.6,11.9,49.5,12.9,47.8,12.9z"/>
+    <path id="L" class="st1" d="M54.8,12.8V3.2h1.3v8.5h3.7v1.1H54.8z"/>
+    <path id="T" class="st1" d="M64.8,4.3v8.5h-1.3V4.3h-2.3V3.2h6v1.1H64.8z"/>
+    <path id="I" class="st1" d="M70.1,12.8v-1.1h1.1V4.3h-1.1V3.2h3.4v1.1h-1.1v7.4h1.1v1.1H70.1z"/>
+    <path id="N-2" class="st1" d="M81.7,12.8l-2-4.3c-0.6-1.2-1-2.4-1.4-3.6l0,0c0.1,1.3,0.1,2.4,0.1,4.3v3.6h-1.2V3.2h1.5l1.9,4.3
+      c0.6,1.2,1,2.4,1.5,3.6l0,0C82.1,9.7,82,8.6,82,6.7V3.2h1.2v9.6H81.7z"/>
+    <path id="G" class="st1" d="M91.8,12.8c0-0.4,0-0.8,0.1-1.1l0,0c-0.3,0.8-1.1,1.3-2,1.3c-1.9,0-3-1.5-3-4.9s1.4-4.9,3.2-4.9
+      C91.4,3,92.6,4,92.7,5.3c0,0.1,0,0.2,0,0.3h-1.3c-0.1-1-0.6-1.4-1.4-1.4c-1.1,0-1.8,1-1.8,3.8s0.6,3.8,1.9,3.8
+      c0.9,0,1.4-0.7,1.4-2.1V9h-1.3V7.9h2.6v4.9H91.8z"/>
+  </g>
+  <g
+    transform="translate(340 402)"
     opacity="0"
-    font-size="14"
     fill="#813c96"
-    font-family="LetterGothic"
-    letter-spacing="0.14em"
-    style="isolation: isolate"
     data-attr-on-enter="
-      screen0:opacity=0,translateX=377.5,translateY=402
-      screen1:opacity=1,translateX=377.5,translateY=402
-      screen2:opacity=1,translateX=403.5,translateY=452
-      screen3:opacity=0,translateX=377.5,translateY=402
+      screen0:opacity=0,translateX=340,translateY=402
+      screen1:opacity=1,translateX=340,translateY=402
+      screen2:opacity=1,translateX=360,translateY=452
+      screen3:opacity=0,translateX=340,translateY=402
       screen4:opacity=1,translateX=136.5,translateY=464
     "
   >
-    DESIGN
-  </text>
-  <text
-    transform="translate(251.24 186)"
+    <path id="D" class="st1" d="M28,12.8h-2.2V3.2h2.4c2.4,0,3.3,1.4,3.3,4.8S30.4,12.8,28,12.8z M27.9,4.3H27v7.4h0.9
+    c1.6,0,2.2-1,2.2-3.7S29.6,4.3,27.9,4.3L27.9,4.3z"/>
+    <path id="E" class="st1" d="M35.2,12.8V3.2h4.7v1.1h-3.4v2.9h3.2v1.1h-3.2v3.4h3.6v1.1H35.2z"/>
+    <path id="S" class="st1" d="M45.9,12.9c-1,0-2-0.4-2.8-1l0.7-1.1c0.6,0.5,1.4,0.9,2.2,0.9c0.7,0.1,1.4-0.5,1.5-1.2
+      c0-0.1,0-0.2,0-0.2c0-2.2-4-2-4-4.8c0-1.3,1-2.4,2.4-2.5c0.1,0,0.2,0,0.3,0c0.9,0,1.7,0.3,2.4,0.8l-0.6,1c-0.5-0.4-1.1-0.7-1.8-0.7
+      c-1,0-1.4,0.5-1.4,1.2c0,1.9,4.1,1.8,4.1,4.7c0,1.5-1.1,2.7-2.6,2.7C46.1,12.9,46,12.9,45.9,12.9z"/>
+    <path id="I" class="st1" d="M51.9,12.8v-1.1H53V4.3h-1.1V3.2h3.4v1.1h-1.1v7.4h1.1v1.1H51.9z"/>
+    <path id="G" class="st1" d="M63.3,12.8c0-0.4,0-0.8,0.1-1.1l0,0c-0.3,0.8-1.1,1.3-2,1.3c-1.9,0-3-1.5-3-4.9s1.4-4.9,3.2-4.9
+      C62.9,3,64.1,4,64.2,5.3c0,0.1,0,0.2,0,0.3h-1.3c-0.1-1-0.6-1.4-1.3-1.4c-1.1,0-1.8,1-1.8,3.8s0.6,3.8,1.9,3.8
+      c0.9,0,1.4-0.7,1.4-2.1V9h-1.3V7.9h2.6v4.9H63.3z"/>
+    <path id="N" class="st1" d="M72.8,12.8l-2-4.3c-0.6-1.2-1-2.4-1.4-3.6l0,0c0.1,1.3,0.1,2.4,0.1,4.3v3.6h-1.2V3.2h1.5l1.9,4.3
+      c0.6,1.2,1,2.4,1.5,3.6l0,0C73.1,9.7,73,8.6,73,6.7V3.2h1.2v9.6H72.8z"/>
+  </g>
+  <g
+    transform="translate(251.24 175)"
     opacity="0"
-    font-size="14"
     fill="#ea1e5c"
-    font-family="LetterGothic"
-    letter-spacing="0.14em"
-    style="isolation: isolate"
     data-attr-on-enter="
-      screen0:opacity=0,translateX=251.24,translateY=186
-      screen1:opacity=1,translateX=251.24,translateY=186
-      screen2:opacity=1,translateX=272.24,translateY=240
-      screen3:opacity=0,translateX=251.24,translateY=186
-      screen4:opacity=1,translateX=401.24,translateY=370
+      screen0:opacity=0,translateX=251.24,translateY=175
+      screen1:opacity=1,translateX=251.24,translateY=175
+      screen2:opacity=1,translateX=272.24,translateY=225
+      screen3:opacity=0,translateX=251.24,translateY=175
+      screen4:opacity=1,translateX=390,translateY=370
     "
   >
-    ENGINEERING
-  </text>
-  <text
+    <path id="E" class="st1" d="M3.2,12.3V2.7h4.7v1.1H4.5v2.9h3.2v1.1H4.5v3.4h3.6v1.1H3.2z"/>
+    <path id="N" class="st1" d="M16.4,12.3l-2-4.3c-0.6-1.2-1-2.4-1.4-3.7l0,0c0.1,1.3,0.1,2.4,0.1,4.3v3.6h-1.2V2.7h1.6L15.4,7
+      c0.6,1.2,1,2.4,1.5,3.6l0,0c-0.1-1.4-0.1-2.5-0.1-4.4V2.7h1.2v9.6L16.4,12.3z"/>
+    <path id="G" class="st1" d="M26.5,12.3c0-0.4,0-0.8,0-1.1l0,0c-0.3,0.8-1.1,1.3-2,1.3c-1.9,0-3-1.5-3-4.9s1.4-4.9,3.2-4.9
+      c1.3-0.1,2.5,0.9,2.6,2.3c0,0.1,0,0.2,0,0.2h-1.3c-0.1-1-0.6-1.4-1.4-1.4c-1,0-1.8,1-1.8,3.8s0.6,3.8,1.9,3.8
+      c0.9,0,1.4-0.7,1.4-2.1V8.5h-1.3V7.4h2.5v4.9H26.5z"/>
+    <path id="I" class="st1" d="M30.9,12.3v-1.1h1.1V3.8h-1.1V2.7h3.4v1.1h-1v7.4h1v1.1H30.9z"/>
+    <path id="N-2" class="st1" d="M42.4,12.3l-2-4.3c-0.6-1.2-1.1-2.4-1.5-3.7l0,0c0.1,1.3,0.1,2.4,0.1,4.3v3.6h-1.2V2.7h1.5L41.4,7
+      c0.6,1.2,1,2.4,1.5,3.6l0,0c-0.1-1.4-0.1-2.5-0.1-4.4V2.7h1.2v9.6H42.4z"/>
+    <path id="E-2" class="st1" d="M48.2,12.3V2.7h4.7v1.1h-3.4v2.9h3.2v1.1h-3.2v3.4h3.6v1.1H48.2z"/>
+    <path id="E-3" class="st1" d="M56.9,12.3V2.7h4.7v1.1h-3.4v2.9h3.2v1.1h-3.2v3.4h3.6v1.1H56.9z"/>
+    <path id="R" class="st1" d="M69.7,12.3L68,8.4h-1.1v3.9h-1.3V2.7h2.5c1.4-0.2,2.6,0.8,2.8,2.2c0,0.2,0,0.4,0,0.5
+      c0.1,1.2-0.6,2.3-1.7,2.7l2.1,4.1H69.7z M67.8,3.8h-1v3.6h0.9c0.9,0.1,1.7-0.7,1.8-1.6c0-0.1,0-0.2,0-0.4c0.1-0.8-0.5-1.6-1.3-1.6
+      C68.1,3.8,68,3.8,67.8,3.8z"/>
+    <path id="I-2" class="st1" d="M74.1,12.3v-1.1h1.1V3.8h-1.1V2.7h3.4v1.1h-1.1v7.4h1.1v1.1H74.1z"/>
+    <path id="N-3" class="st1" d="M85.7,12.3l-2-4.3c-0.6-1.2-1-2.4-1.4-3.6l0,0c0.1,1.3,0.1,2.4,0.1,4.3v3.6h-1.2V2.7h1.5L84.7,7
+      c0.6,1.2,1,2.4,1.5,3.6l0,0C86.1,9.2,86,8.1,86,6.2V2.7h1.2v9.6H85.7z"/>
+    <path id="G-2" class="st1" d="M95.8,12.3c0-0.4,0-0.8,0.1-1.1l0,0c-0.3,0.8-1.1,1.3-2,1.3c-1.9,0-3-1.5-3-4.9s1.4-4.9,3.2-4.9
+      c1.3-0.1,2.5,0.9,2.6,2.3c0,0.1,0,0.2,0,0.2h-1.3c-0.1-1-0.6-1.4-1.4-1.4c-1.1,0-1.8,1-1.8,3.8s0.6,3.8,1.9,3.8
+      c0.9,0,1.4-0.7,1.4-2.1V8.5h-1.3V7.4h2.5v4.9H95.8z"/>
+  </g>
+  <g
+    id="TRAINING"
     transform="translate(407.5 263)"
     opacity="0"
-    font-size="14"
     fill="#1e4c62"
-    font-family="LetterGothic"
-    letter-spacing="0.14em"
-    style="isolation: isolate"
     data-attr-on-enter="
       screen0:opacity=0,translateX=407.5,translateY=263
       screen1:opacity=1,translateX=407.5,translateY=263
       screen2:opacity=0,translateX=407.5,translateY=263
-      screen3:opacity=1,translateX=323.5,translateY=416
+      screen3:opacity=1,translateX=310,translateY=416
       screen4:opacity=0,translateX=407.5,translateY=263
     "
   >
-    TRAINING
-  </text>
+    <path id="T" class="st1" d="M20.2,4.3v8.5h-1.3V4.3h-2.3V3.2h6v1.1H20.2z"/>
+    <path id="R" class="st1" d="M30.1,12.8L28.3,9h-1.1v3.8h-1.3V3.2h2.5C29.8,3,31.1,4,31.2,5.4c0,0.2,0,0.3,0,0.5
+      c0.1,1.2-0.6,2.3-1.7,2.7l2.1,4.1H30.1z M28.2,4.3h-1v3.6h0.9c0.9,0.1,1.7-0.7,1.8-1.6c0-0.1,0-0.2,0-0.4c0.1-0.8-0.5-1.6-1.3-1.6
+      C28.4,4.3,28.3,4.3,28.2,4.3z"/>
+    <path id="A" class="st1" d="M39.6,12.8l-0.7-2.7h-2.7l-0.7,2.7h-1.3L37,3.2h1.4l2.7,9.6H39.6z M38.1,6.9c-0.3-0.8-0.4-1.6-0.5-2.4
+      l0,0c-0.1,0.8-0.2,1.6-0.5,2.4l-0.6,2.2h2.1L38.1,6.9z"/>
+    <path id="I" class="st1" d="M44,12.8v-1.1h1V4.3h-1V3.2h3.4v1.1h-1v7.4h1v1.1H44z"/>
+    <path id="N" class="st1" d="M55.5,12.8l-2-4.3c-0.6-1.2-1-2.4-1.5-3.6l0,0c0.1,1.3,0.1,2.4,0.1,4.3v3.6H51V3.2h1.5l1.9,4.3
+      c0.6,1.2,1.1,2.4,1.5,3.6l0,0c-0.1-1.4-0.1-2.5-0.1-4.4V3.2h1.2v9.6H55.5z"/>
+    <path id="I-2" class="st1" d="M60.7,12.8v-1.1h1.1V4.3h-1.1V3.2h3.4v1.1h-1v7.4h1v1.1H60.7z"/>
+    <path id="N-2" class="st1" d="M72.3,12.8l-2-4.3c-0.6-1.2-1-2.4-1.4-3.6l0,0C69,6.2,69,7.3,69,9.2v3.6h-1.2V3.2h1.5l1.9,4.3
+      c0.6,1.2,1,2.4,1.4,3.6l0,0c-0.1-1.4-0.1-2.5-0.1-4.4V3.2h1.2v9.6L72.3,12.8z"/>
+    <path id="G" class="st1" d="M82.4,12.8c0-0.4,0-0.8,0-1.1l0,0c-0.3,0.8-1.1,1.3-2,1.3c-1.9,0-3-1.5-3-4.9s1.4-4.9,3.2-4.9
+      C82,3,83.2,3.9,83.3,5.3c0,0.1,0,0.2,0,0.3H82c-0.1-1-0.6-1.4-1.3-1.4c-1,0-1.8,1-1.8,3.8s0.6,3.8,1.9,3.8c0.9,0,1.4-0.7,1.4-2.1V9
+      h-1.3V7.9h2.6v4.9H82.4z"/>
+  </g>
 </svg>
