--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -79,6 +79,10 @@
           {% asset icons/icon-arrow-down.svg @inline %}
           <div>{{_.clients_show_more}}</div>
         </div>
+        <div class="row align-center sp-3 hidden">
+          {% asset icons/icon-arrow-up.svg @inline %}
+          <div>{{_.clients_show_less}}</div>
+        </div>
       </button>
     </div>
   </div>
