refactor home page animation

--- a/_includes/locations.html
+++ b/_includes/locations.html
@@ -5,7 +5,7 @@
 {%- assign link_class = "link-light" -%}
 {%endif%}
 <div
-  class="{%if include.is_white %}bg-gray100 text-black{%else%}bg-blue text-white{%endif%} col px-4 pt-6 pb-7 sp-4 align-center">
+  class="{%if include.is_white %}bg-gray100 text-black{%else%}bg-blue text-white{%endif%} col px-4 pt-6 pb-7 sp-4 align-center relative zindex-1">
   <div class="maxwidth-7 width-full col sp-3 q-xl-sp-6">
     <h2 class="font-heading text-xl maxwidth-5 q-md-text-center">{{_.title}}</h2>
     <div class="row sp-8 q-xl-col q-md-align-center q-lg-sp-6-parent">
