--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,3 +1,3 @@
-<div class="height-12" id="map">
+<div class="height-12 relative zindex-1" id="map">
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFerqD0_QXU7Jdn8xhQdRYYxDCtd4ZoWw&callback=initMap"></script>
 </div>
