--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {%- include head.html -%}
   <body class="col {{layout.body_class}}">
     {%- include header.html -%}
-    <main aria-label="Content" class="fill-parent">
+    <main aria-label="Content" class="fill-parent relative">
       {{ content }}
     </main>
     {%- include footer.html -%}
