--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -1,20 +1,35 @@
+.home-circle-outer {
+  top:25vh;
+  @media #{$query-md} {
+    top: 3vh;
+  }
+}
+
+.home-curtain {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 15vh, rgba(255, 255, 255, 0) 25vh, rgba(255, 255, 255, 0) 75vh, rgba(255, 255, 255, 1) 85vh);
+  @media #{$query-md} {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 45vh, rgba(255, 255, 255, 0) 55vh);
+  }
+}
+
 .home-circle-container {
   width: 40%;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
+  height: 60vh;
 
   @media #{$query-md} {
     width: 100%;
   }
 }
 
-.home-scroll-screen {
+.home-scroll-screen-content {
   margin-left: 40%;
-  height: 120vh;
+  min-height: 60vh;
   margin-right: 3rem;
 
   @media #{$query-md} {
     margin-left: 0;
     margin-right: 0;
+    min-height: 100vh;
   }
 }
 
@@ -22,11 +37,4 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.home-scroll-screen-content {
-  transition-property: opacity;
-}
-.opacity-0 {
-  opacity: 0;
 }
