--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -2,10 +2,12 @@
 <div class="relative" data-active-snapping>
   <div class="relative height-screen sroll-snap-start row q-lg-col">
     <div class="width-2_3 pt-8 pb-6 col justify-center align-end q-lg-align-start q-lg-width-full pl-4">
-      <div class="col sp-4 maxwidth-5 pr-6">
-        <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.intro_lead}}</div>
-        <h1 class="font-heading text-xxl font-normal">{{_.intro_title}}</h1>
-        <div class="markdown text-sm">{{_.intro_text | markdownify}}</div>
+      <div style="max-width: 42rem;">
+        <div class="col sp-4 pr-6">
+          <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.intro_lead}}</div>
+          <h1 class="font-heading text-xxl font-normal">{{_.intro_title}}</h1>
+          <div class="markdown text-sm">{{_.intro_text | markdownify}}</div>
+        </div>
       </div>
     </div>
     <div class="width-1_3 relative q-lg-width-full fill-parent">
@@ -16,8 +18,8 @@
     </div>
   </div>
 
-  <div class="col sp-4 sroll-snap-start pt-5 pb-8" id="next">
-    <div class="height-10 relative">
+  <div class="col sp-7 sroll-snap-start pt-5 pb-8" id="next">
+    <div class="height-12 relative q-lg-height-10 q-sm-height-8">
       {% asset {{_.about_image}} class="absolute inset-full"%}
     </div>
     <div class="col align-center px-4">
