fixes for approach page

--- a/_includes/approach-image.html
+++ b/_includes/approach-image.html
@@ -3,6 +3,7 @@
   viewbox="0 0 1300 920"
   xmlns="http://www.w3.org/2000/svg"
   style="transform-origin:0 100%"
+  data-only-animate-if-matches="(max-width: 40em)"
   data-attr-on-enter="
     screen1:translateX=0,translateY=0,scale=1
     screen2:translateX=0,translateY=0,scale=2
