improve approach animation

--- a/_includes/pages/approach.html
+++ b/_includes/pages/approach.html
@@ -1,7 +1,11 @@
 {%- assign _ = site.data.pages.approach[page.locale] -%}
 
 <div class="relative" data-active-snapping>
-  <div class="relative height-screen sroll-snap-start col align-center justify-center py-7 px-4 sroll-snap-start overflow-hidden" data-after-approach-animate="+text-white">
+  <div class="absolute inset-full zindex-1 non-interactive">
+    <div class="approach-curtain sticky height-screen"></div>
+  </div>
+
+  <div class="relative height-screen sroll-snap-start col align-center justify-center py-7 px-4 sroll-snap-start overflow-hidden relative zindex-1" data-after-approach-animate="+text-white">
     <div class="maxwidth-7 width-full col sp-2 pb-6 relative zindex-1">
       <div class="uppercase font-heading font-bold text-blue text-sm lead-line" data-after-approach-animate="-text-blue +text-white">{{_.intro_lead}}</div>
       <div class="markdown text-xxl q-md-text-lg font-heading">{{_.intro_text | markdownify}}</div>
@@ -19,13 +23,10 @@
     </div>
   </div>
 
-  <div class="relative">
+  <div class="relative" style="padding-bottom:40vh">
     <div class="absolute inset-full col align-center non-interactive zindex-1">
-      <div class="maxwidth-7 width-full sticky height-screen row align-center overflow-hidden">
-          <div class="white-cover"></div>
-        <div class="approach-image-container">
-          {%- include approach-image.html -%}
-        </div>
+      <div class="maxwidth-7 width-full sticky height-screen row align-center overflow-hidden q-md-align-end pb-7">
+        {%- include approach-image.html -%}
         <div class="absolute inset-x bottom-0 pb-4 col align-center">
           <a class="button-text is-blue" href="#projects" style="pointer-events: auto">
             <div class="row sp-3 align-center">
@@ -36,23 +37,22 @@
         </div>
       </div>
     </div>
+    <div class="absolute inset-full col align-center relative zindex-1">
+      <div class="maxwidth-7 width-full sticky q-md-px-4 pt-7 height-screen">
+        <div class="uppercase font-heading font-bold text-blue text-xs lead-line sticky">{{_.slider_lead}}</div>
+      </div>
+    </div>
 
 
     {%- for screen in _.screens -%}
-    <div class="sroll-snap-center col align-center px-4" data-visible-key="screen{{forloop.index}}"
+    <div class="sroll-snap-start col align-center px-4" data-visible-key="screen{{forloop.index}}"
       id="n{{forloop.index}}">
       <div class="maxwidth-7 width-full">
-        <div class="approach-scroll-screen relative col">
-          <div class="sticky height-screen col sp-4 pt-7 pb-7">
-            {%- if screen.lead - %}
-            <div class="uppercase font-heading font-bold text-blue text-xs lead-line">{{screen.lead}}</div>
-            {%- endif- %}
-            <div class="push show-md"></div>
-            <h2 class="font-heading text-xl q-md-text-md">{{screen.title}}</h2>
-            {%- if screen.text - %}
-            <div class="q-md-text-xs maxwidth-2 approach-scroll-screen-text">{{screen.text}}</div>
-            {%- endif- %}
-          </div>
+        <div class="approach-scroll-screen relative col sp-4 pt-7 pb-7">
+          <h2 class="font-heading text-xl q-md-text-md pt-4">{{screen.title}}</h2>
+          {%- if screen.text - %}
+          <div class="q-md-text-xs maxwidth-2 approach-scroll-screen-text">{{screen.text}}</div>
+          {%- endif- %}
         </div>
       </div>
     </div>
