change width of first hero image

--- a/_includes/pages/blog.html
+++ b/_includes/pages/blog.html
@@ -6,7 +6,7 @@
 <div class="col align-center px-4 py-7 pt-8">
   <div class="maxwidth-7 width-full col sp-7">
     <div class="row sp-6 q-md-col pt-5">
-      <div class="width-1_3 no-shrink relative q-md-width-full minheight-9">
+      <div class="width-40p no-shrink relative q-md-width-full minheight-9">
         <img src="{{latest_post.hero_image.url}}?w=800&h=800&fit=fill&f=faces"
           alt="{{latest_post.hero_image.description}}" class="absolute inset-full" />
       </div>
