separate approach button into two buttons

--- a/_includes/pages/approach.html
+++ b/_includes/pages/approach.html
@@ -14,12 +14,14 @@
       <div class="approach-circle is-small" id="approach-circle"></div>
     </div>
     <div class="absolute inset-x bottom-0 col align-center text-black pb-4 zindex-1">
-      <a class="button-text" data-after-approach-animate="+is-white" href="#n1">
-        <div class="col sp-3">
-          <div>{{_.intro_cta_text}}</div>
+      <div class="col sp-3 align-center">
+        <a class="button-text" data-after-approach-animate="+is-white" href="#n1">
+          {{_.intro_cta_text}}
+        </a>
+        <a class="button-text" data-after-approach-animate="+is-white" href="#n1">
           {% asset icons/icon-arrow-down.svg @inline %}
-        </div>
-      </a>
+        </a>
+      </div>
     </div>
   </div>
 
