--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article class="col align-center px-4 py-6 pt-8">
-  <div class="page-content maxwidth-5 width-full col{% if page.name contains '.md' %} markdown{% endif %}">
+  <div class="page-content maxwidth-5 width-full col pt-6{% if page.name contains '.md' %} markdown{% endif %}">
     {{ content }}
   </div>
 </article>
