--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -95,12 +95,14 @@
     <div class="row sp-8 q-md-col q-md-sp-0">
       <div class="row pt-6 pb-7 sp-6 align-start q-xl-col q-xl-sp-0 q-md-px-4">
         <div class="uppercase font-heading font-bold text-sm lead-line">Blog</div>
-        <div class="col sp-3 pt-5">
-          <a href="{{latest_post.url}}" class="reset-link">
-            <h3 class="font-heading text-xl">{{latest_post.title}}</h3>
-          </a>
-          <div class="markdown">
-            {{ latest_post.description | markdownify }}
+        <div class="col sp-5 pt-5">
+          <div class="col sp-3">
+            <a href="{{latest_post.url}}" class="reset-link">
+              <h3 class="font-heading text-xl">{{latest_post.title}}</h3>
+            </a>
+            <div class="markdown">
+              {{ latest_post.description | markdownify }}
+            </div>
           </div>
           <div class="col align-start">
             <a class="button-ghost is-white" href="{{latest_post.url}}">{{_.blog_cta_text}}</a>
@@ -125,11 +127,12 @@
     <div class="py-8 pl-6 pr-4 maxwidth-10 col sp-3">
       <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.jobs_lead}}</div>
       <h2 class="font-heading font-bold text-xl">{{_.jobs_title}}</h2>
-      <div>{{_.jobs_desc}}</div>
-      <div class="col align-start">
+      <div class="col align-start sp-5">
+        <div>{{_.jobs_desc}}</div>
         {% locale_link jobs class:"button-ghost is-blue" %}
           {{_.jobs_cta_text}}
         {% endlocale_link %}
+        </div>
       </div>
     </div>
   </div>
