--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -2,7 +2,7 @@
 <div class="relative" data-active-snapping>
   <div class="relative height-screen sroll-snap-start row q-lg-col">
     <div class="width-2_3 pt-8 pb-6 col justify-center align-end q-lg-align-start q-lg-width-full pl-4">
-      <div style="max-width: 42rem;">
+      <div style="max-width: calc(30rem + 25%);">
         <div class="col sp-4 pr-6">
           <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.intro_lead}}</div>
           <h1 class="font-heading text-xxl font-normal">{{_.intro_title}}</h1>
