add partners site

--- a/_includes/pages/approach.html
+++ b/_includes/pages/approach.html
@@ -32,7 +32,7 @@
         <div class="absolute inset-x bottom-0 pb-4 col align-center">
           <a class="button-text is-blue" href="#projects" style="pointer-events: auto">
             <div class="row sp-3 align-center">
-              {% asset icons/icon-arrow-right.svg @inline %}
+              {% asset icons/icon-arrow-down.svg @inline %}
               <div>{{_.projects_link_text}}</div>
             </div>
           </a>
