--- a/_includes/pages/partners.html
+++ b/_includes/pages/partners.html
@@ -1,1 +1,18 @@
-<h2>{{ site.data.pages.partners[page.locale].title }}</h2>
+{%- assign _ = site.data.pages.partners[page.locale] -%}
+
+<div class="col sp-5">
+  <div class="markdown">
+    <h1>{{ _.title }}</h1>
+    {{_.content}}
+  </div>
+
+  <div class="row wrappable">
+    {%- for partner in site.data.pages.partners.partners -%}
+    <a href={{partner.link}} class="row justify-center align-center width-1_3 px-4 py-3 q-lg-width-1_2">
+      {% asset {{partner.logo}} alt={{partner.name}} title={{partner.name}} class="full-width maxheight-6" %}
+    </a>
+    {%- endfor -%}
+  </div>
+</div>
+
+
