--- a/_includes/locations.html
+++ b/_includes/locations.html
@@ -1,42 +1,26 @@
 {%- assign _ = site.data.includes.locations[page.locale] -%}
-{%if include.is_white %}
+{%- if include.is_white -%}
 {%- assign link_class = "link-blue" -%}
-{%else%}
+{%- else -%}
 {%- assign link_class = "link-light" -%}
-{%endif%}
+{%- endif -%}
 <div
-  class="{%if include.is_white %}bg-gray100 text-black{%else%}bg-blue text-white{%endif%} col px-4 pt-6 pb-7 sp-4 align-center relative zindex-1">
-  <div class="maxwidth-7 width-full col sp-3 q-xl-sp-6">
-    <h2 class="font-heading text-xl maxwidth-5 q-md-text-center">{{_.title}}</h2>
-    <div class="row sp-8 q-xl-col q-md-align-center q-lg-sp-6-parent">
-      <div class="col sp-5 q-lg-align-center">
-        <div class="height-10 hide-xl"></div>
-        <div class="col q-lg-align-center">
+  class="{%if include.is_white %}bg-gray100 text-black{%else%}bg-blue text-white{%endif%} col px-4 pt-7 pb-8 sp-4 align-center relative zindex-1">
+  <div class="maxwidth-7 width-full col sp-8 q-xl-sp-6">
+    <h2 class="font-heading text-xl maxwidth-5">{{_.title}}</h2>
+    <div class="row sp-8 q-xl-col q-lg-sp-6-parent">
+      <div class="col sp-5">
+        <div class="col">
           <div>D-LABS GmbH</div>
           <a class="{{link_class}}" href="mailto:info@d-labs.com">info@d-labs.com</a>
         </div>
       </div>
-      <div class="row sp-3 q-lg-col q-lg-align-center fill-parent">
+      <div class="row sp-3 q-lg-col fill-parent q-lg-sp-7">
         {%- for location in site.data.includes.locations.locations -%}
-        <div class="col sp-5 fill-parent q-lg-align-center q-lg-sp-2">
-          <div>
-            {% asset {{location.img}}
-                srcset:width="400"
-                srcset:width="200"
-                srcset:width="100"
-                sizes="10em"
-                class="rounded-full width-10"
-              %}
-          </div>
-          <div class="col sp-4 q-lg-align-center q-lg-text-center">
-            <div class="font-heading uppercase text-sm">
-              {%-if location.is_main -%}
-              {{_.main}}{% else %}&nbsp;
-              {% endif %}
-            </div>
-            <div class="text-lg underline pb-1">{{location.name}}</div>
+        <div class="col sp-5 fill-parent q-lg-sp-2">
+          <div class="col sp-4">
             <div>
-              {{location.street}}<br />{{location.city}}
+              {{location.street}}<br />{{location.zip}} <b class="text-blue">{{location.city}}</b>
             </div>
             <div>
               {{location.tel}}<br /><a class="{{link_class}}" href="mailto:{{location.email}}">{{location.email}}</a>
@@ -48,4 +32,6 @@
     </div>
   </div>
 </div>
+{%- if include.with_map -%}
 {%- include map.html -%}
+{%- endif -%}
